k8s-nothing/couponkill-simple/coupon-ware.yaml
apiVersion: v1
kind: Pod
metadata:
  name: software-pod
  namespace: couponkill
  labels:
    app: software
spec:
  imagePullSecrets:
    - name: mysecret
  containers:
    # nacos模块
    - name: nacos
      image: nacos/nacos-server:v3.1.1
      resources:
        requests:
          memory: "512Mi"
          cpu: "500m"
        limits:
          memory: "1Gi"
          cpu: "1000m"
      ports:
        - containerPort: 8848
      imagePullPolicy: IfNotPresent
      livenessProbe:
        httpGet:
          path: /nacos/actuator/health
          port: 8848
        initialDelaySeconds: 60
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /nacos/actuator/health
          port: 8848
        initialDelaySeconds: 30
        periodSeconds: 5

    # rocketmq-namesrv模块
    - name: rocketmq-namesrv
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:rocketmq-namesrv
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
      ports:
        - containerPort: 9876
      imagePullPolicy: IfNotPresent
      livenessProbe:
        tcpSocket:
          port: 9876
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        tcpSocket:
          port: 9876
        initialDelaySeconds: 10
        periodSeconds: 5

    # rocketmq-broker模块
    - name: rocketmq-broker
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:rocketmq-broker
      resources:
        requests:
          memory: "512Mi"
          cpu: "500m"
        limits:
          memory: "1Gi"
          cpu: "1000m"
      ports:
        - containerPort: 10909
        - containerPort: 10911
        - containerPort: 10912
      imagePullPolicy: IfNotPresent
      livenessProbe:
        tcpSocket:
          port: 10911
        initialDelaySeconds: 60
        periodSeconds: 10
      readinessProbe:
        tcpSocket:
          port: 10911
        initialDelaySeconds: 30
        periodSeconds: 5

    # sentinel-dashboard模块
    - name: sentinel-dashboard
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:sentinel-dashboard
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
      ports:
        - containerPort: 8080
      imagePullPolicy: IfNotPresent
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 5
