k8s-nothing/couponkill-simple/couponKill.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: couponkill
  labels:
    name: couponkill
---
# 创建一个多容器的pod包含项目的所有业务服务镜像
apiVersion: v1
kind: Pod
metadata:
  name: couponkill-pod
  namespace: couponkill
  labels:
    app: couponkill
spec:
  imagePullSecrets:
    - name: mysecret
  containers:
    # 网关模块
    - name: couponkill-gateway
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:gateway
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 8080
      imagePullPolicy: IfNotPresent
      livenessProbe:
        httpGet:
          path: /actuator/health
          port: 8080
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /actuator/health
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 5

    # 订单模块
    - name: couponkill-order
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:order
      resources:
        requests:
          memory: "256Mi"
          cpu: "500m"
        limits:
          memory: "512Mi"
          cpu: "1000m"
      ports:
        - containerPort: 8082
      imagePullPolicy: IfNotPresent
      livenessProbe:
        httpGet:
          path: /actuator/health
          port: 8082
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /actuator/health
          port: 8082
        initialDelaySeconds: 10
        periodSeconds: 5

    # 优惠券模块
    - name: couponkill-coupon
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:coupon
      resources:
        requests:
          memory: "256Mi"
          cpu: "500m"
        limits:
          memory: "512Mi"
          cpu: "1000m"
      ports:
        - containerPort: 8081
      imagePullPolicy: IfNotPresent
      livenessProbe:
        httpGet:
          path: /actuator/health
          port: 8081
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /actuator/health
          port: 8081
        initialDelaySeconds: 10
        periodSeconds: 5

    # 用户模块
    - name: couponkill-user
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:user
      resources:
        requests:
          memory: "256Mi"
          cpu: "500m"
        limits:
          memory: "512Mi"
          cpu: "1000m"
      ports:
        - containerPort: 8083
      imagePullPolicy: IfNotPresent
      livenessProbe:
        httpGet:
          path: /actuator/health
          port: 8083
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /actuator/health
          port: 8083
        initialDelaySeconds: 10
        periodSeconds: 5

    # go服务模块
    - name: couponkill-go
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:seckill-go
      resources:
        requests:
          memory: "256Mi"
          cpu: "500m"
        limits:
          memory: "512Mi"
          cpu: "1000m"
      ports:
        - containerPort: 8090
      imagePullPolicy: IfNotPresent
      livenessProbe:
        httpGet:
          path: /health
          port: 8090
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /health
          port: 8090
        initialDelaySeconds: 10
        periodSeconds: 5
