k8s-nothing/couponkill-simple/storage-ware.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-pod
  namespace: couponkill
  labels:
    app: storage
spec:
  imagePullSecrets:
    - name: mysecret
  containers:
    - name: mysql
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:mysql
      resources:
        requests:
          memory: "1Gi"
          cpu: "1000m"
        limits:
          memory: "2Gi"
          cpu: "2000m"
      ports:
        - containerPort: 3306
      volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      livenessProbe:
        tcpSocket:
          port: 3306
        initialDelaySeconds: 60
        periodSeconds: 10
      readinessProbe:
        tcpSocket:
          port: 3306
        initialDelaySeconds: 30
        periodSeconds: 5

    - name: redis
      image: crpi-n5rumpjwbqinoz4c.cn-hangzhou.personal.cr.aliyuncs.com/thetestspacefordocker/my-docker:redis
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
      ports:
        - containerPort: 6379
      volumeMounts:
        - name: redis-storage
          mountPath: /data
      livenessProbe:
        tcpSocket:
          port: 6379
        initialDelaySeconds: 30
        periodSeconds: 10
      readinessProbe:
        tcpSocket:
          port: 6379
        initialDelaySeconds: 10
        periodSeconds: 5

  volumes:
    - name: mysql-storage
      persistentVolumeClaim:
        claimName: mysql-pvc
    - name: redis-storage
      persistentVolumeClaim:
        claimName: redis-pvc
