k8s-nothing/couponkill-simple/coupon-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: couponkill-service
  namespace: couponkill
spec:
  selector:
    app: couponkill
  ports:
    - name: gateway
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: coupon
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: order
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: user
      protocol: TCP
      port: 8083
      targetPort: 8083
    - name: go
      protocol: TCP
      port: 8090
      targetPort: 8090
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: software-service
  namespace: couponkill
spec:
  selector:
    app: software
  ports:
    - name: nacos
      protocol: TCP
      port: 8848
      targetPort: 8848
    - name: rocketmq-namesrv
      protocol: TCP
      port: 9876
      targetPort: 9876
    - name: rocketmq-broker
      protocol: TCP
      port: 10911
      targetPort: 10911
    - name: sentinel
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  namespace: couponkill
spec:
  selector:
    app: storage
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
